kubernetes/apps/network/envoy-gateway/gateway/httproutes-redirect.yaml
---
# Global HTTP->HTTPS redirect for the internal Gateway's :80 listener
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect-internal
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
# Global HTTP->HTTPS redirect for the external Gateway's :80 listener
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect-external
  namespace: network
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
